--- a/course-02/exercises/udacity-c2-restapi/.env
+++ b/course-02/exercises/udacity-c2-restapi/.env
@@ -4,4 +4,4 @@ POSTGRES_DATABASE="postgres"
 POSTGRES_HOST="postgres.cenno7ra1ocy.us-east-1.rds.amazonaws.com"
 AWS_REGION="us-east-1"
 AWS_PROFILE="default"
-AWS_MEDIA_BUCKET="880178154976-omar-dev"
+AWS_MEDIA_BUCKET="udagram-amr-dev"
